[gd_scene load_steps=7 format=3 uid="uid://b2hkuu4ohgbnk"]

[ext_resource type="Script" uid="uid://cuad6lpso0q62" path="res://Manager/battle_manager.gd" id="1_c6fe6"]
[ext_resource type="Script" uid="uid://hqlphn02kabu" path="res://UI/FlowGen.gd" id="1_i8jx7"]
[ext_resource type="Script" uid="uid://dxavhucjkx8u3" path="res://Manager/TargetManager.gd" id="2_7x82o"]
[ext_resource type="PackedScene" uid="uid://dvin2a62ufrm8" path="res://UI/BoardUI.tscn" id="3_vbtom"]
[ext_resource type="Script" uid="uid://bqo443bjdc1tg" path="res://Manager/enemy_spawner.gd" id="9_tj47k"]
[ext_resource type="Script" uid="uid://bl0o5tym6ijaq" path="res://UI/flow_visualizer.gd" id="10_lsjgq"]

[node name="BattleManager" type="Node2D" groups=["BATTLEMANAGER"]]
script = ExtResource("1_c6fe6")
map_size = Vector2i(2000, 1500)
tile_size = 100

[node name="BoardUI" parent="." instance=ExtResource("3_vbtom")]
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 30
width = 30
height = 30
cellWidth = 50
cellHeight = 50

[node name="FlowGen" type="Node" parent="." groups=["FLOWGEN"]]
script = ExtResource("1_i8jx7")

[node name="TargetManager" type="Node" parent="." groups=["TARGETMANAGER"]]
script = ExtResource("2_7x82o")

[node name="Unit_Parent" type="Node" parent="."]

[node name="Manager_Update" type="Timer" parent="."]
wait_time = 0.1

[node name="Enemy_Spawner" type="Node" parent="."]
script = ExtResource("9_tj47k")

[node name="flow_visualizer" type="Node2D" parent="."]
script = ExtResource("10_lsjgq")

[node name="Redraw_Timer" type="Timer" parent="flow_visualizer"]
wait_time = 0.5

[connection signal="timeout" from="Manager_Update" to="." method="_on_manager_update_timeout"]
[connection signal="timeout" from="flow_visualizer/Redraw_Timer" to="flow_visualizer" method="_on_redraw_timer_timeout"]
